--- a/roles/network-config/tasks/render_xml.yml
+++ b/roles/network-config/tasks/render_xml.yml
@@ -2,5 +2,5 @@
 - name: convert json/yaml configuration in xml format
   config_xml:
     xpath_map: "{{ xpath_map }}"
-    config: "{{ input_configuration.config }}"
+    config: "{{ configuration.config }}"
   register: candidate_configuration
